# dalia-ml

./: .gitignore  README.md  pyproject.toml  results.json
dalia_ml/: notebook.html  notebook.ipynb  notebook.slides.html  notebook2.ipynb  streamlit.py  train_yolo.py
